--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@ var docMod = document.lastModified; // loads last modified time stamp into docMo
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 	var a_canvas = document.getElementById("a"); // makes it easier to indentify the canvas as "a"
-	<canvas id="a" width="300" height="225"></canvas>
-	function draw_b() {
- 	 var b_canvas = document.getElementById("b");
-	  var b_context = b_canvas.getContext("2d");
-  	b_context.fillRect(50, 25, 150, 100);// this should fill the rectangle 
-	}
+	
 	
 	
 	
@@ -78,8 +73,9 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Canvas</p>
-		
+	<p>Canvas
+	<canvas id="a" width="300" height="225"></canvas>
+	</p>
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
