--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 <div id="content" class="w3-container">
 	<p>Canvas</p>
 	<canvas id="a" width="300" height="225"></canvas>
-	<onclick="draw_b();" class="w3-btn w3-black">Draw a rectangle.</a>
+	<a onclick="draw_b();" class="w3-btn w3-black">Draw a rectangle.</a>
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
