--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	
 	<canvas id="a" width="300" height="225"></canvas>
 	
-	<a onclick="draw_b();" class="w3-btn w3-black">Draw a rectangle.</a> <!--This is a button that when clicked will draw a rectangle!!!!-->
+	<a onclick="fillRect();" class="w3-btn w3-black">Draw a rectangle.</a> <!--This is a button that when clicked will draw a rectangle!!!!-->
 
 	<a onclick="b_canvas.width = b_canvas.width;" class="w3-btn w3-black">Clear canvas.</a><!--this button will clear the canvas when clicked!-->
 	
