--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 const canvas = document.getElementById('canvas'); //more easily identifies the canvas as canvas
 const ctx = canvas.getContext('2d');
 ctx.fillStyle = 'green'; //this fill the rectangle with a green color
-ctx.fillRect(20, 10, 150, 100); //fills the rectangle 
+function ctx.fillRect(20, 10, 150, 100); //fills the rectangle 
 	
 ctx.font = "30px Arial"; // this sets the font for what my name will be written with
-ctx.strokeText("Vivian", 10, 50); // this codes for writing my name onto the canvas
+function ctx.strokeText("Vivian", 10, 50); // this codes for writing my name onto the canvas
 	
-ctx.clearRect(0, 0, canvas.width, canvas.height); //this clears the canvas of anything on it
+function ctx.clearRect(0, 0, canvas.width, canvas.height); //this clears the canvas of anything on it
 	
 </script>
 
