changed header and footer color

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function clearRect() {
 </style>
 
 <body>
-<div id="header" class="w3-container w3-flat-carrot">
+<div id="header" class="w3-container w3-flat-emerald">
 	<h1>App6---HTML5-Canvas</h1>
 </div>
 	
@@ -98,7 +98,7 @@ function clearRect() {
 	
 	<a onclick="strokeText();" class="w3-btn w3-black">Write name.</a><!--this button writes my name onto the canvas-->
 	
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-emerald">
 	<p>DIY!</p>
 </footer>
 
