changed the header and footer colors again

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function clearRect(){
 </style>
 
 <body>
-<div id="header" class="w3-container w3-flat-emerald">
+<div id="header" class="w3-container w3-flat-peter-river">
 	<h1>App6---HTML5-Canvas</h1>
 </div>
 	
@@ -101,7 +101,7 @@ function clearRect(){
 	
 	<a onclick="strokeText();" class="w3-btn w3-black">Write name.</a><!--this button writes my name onto the canvas-->
 	
-<footer class="w3-bottom w3-container w3-flat-emerald">
+<footer class="w3-bottom w3-container w3-flat-peter-river">
 	<p>DIY!</p>
 </footer>
 
