--- a/index.html
+++ b/index.html
@@ -40,24 +40,28 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 	
 	
+var canvas = document.getElementById('canvas'); //more easily identifies the canvas as canvas
+
+	
+	
 function fillRect(){
-	var canvas = document.getElementById('canvas'); //more easily identifies the canvas as canvas
-	var ctx = canvas.getContext('2d');
-	ctx.fillRect(20, 10, 150, 100); //fills the rectangle 
-	ctx.fillStyle = 'green'; //this fill the rectangle with a green color
-	}
+	
+	canvas.fillRect(20, 10, 150, 100); //fills the rectangle 
+	canvas.fillStyle = 'green'; //this fill the rectangle with a green color
+}
 
 function strokeText(){
-	var canvas = document.getElementById('canvas'); //more easily identifies the canvas as canvas
-	var ctx = canvas.getContext('2d');
-	ctx.strokeText("Vivian", 10, 50); // this codes for writing my name onto the canvas
-	ctx.font = "30px Arial"; // this sets the font for what my name will be written with
-	}
+	
+	canvas.font = "30px Arial"; // this sets the font for what my name will be written with
+	canvas.strokeText("Vivian", 10, 50); // this codes for writing my name onto the canvas
+	
+}
 function clearRect(){
-	var canvas = document.getElementById('canvas'); //more easily identifies the canvas as canvas
-	var ctx = canvas.getContext('2d');
-	ctx.clearRect(0, 0, canvas.width, canvas.height); //this clears the canvas of anything on it
-	}
+	
+	canvas.clearRect(0, 0, canvas.width, canvas.height); //this clears the canvas of anything on it
+}
+	
+	
 </script>
 
 
@@ -100,6 +104,8 @@ function clearRect(){
 	<a onclick="clearRect();" class="w3-btn w3-black">Clear canvas.</a><!--this button will clear the canvas when clicked!-->
 	
 	<a onclick="strokeText();" class="w3-btn w3-black">Write name.</a><!--this button writes my name onto the canvas-->
+	
+	<a onclick=show image  class="w3-btn w3-black">Load image.</a><!--this button loads an image-->
 	
 <footer class="w3-bottom w3-container w3-flat-peter-river">
 	<p>DIY!</p>
