--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@ function clearRect(){
 }
 	
 	
+function displayImage(){
+	var image = <img src="panda.jpeg" alt="Panda Bear" width="760" height="760">
+		
+} 
+	
 </script>
 
 
@@ -90,6 +95,10 @@ function clearRect(){
     left: 0vw;
     z-index: 1;
 }
+img, object{
+    max-height:100%;
+	max-width:100%;
+}	
 </style>
 
 <body>
@@ -106,13 +115,15 @@ function clearRect(){
 	
 	<canvas id="canvas" width="400" height="300" style="border:1px solid #000000;"></canvas> <!--this codes for the canvas itself and the dimensions of it-->
 	
-	<a href="#one" onclick="fillRect();" class="w3-btn w3-black">Draw a rectangle.</a> <!--This is a button that when clicked will draw a green rectangle!!!!-->
+	<a  onclick="fillRect();" class="w3-btn w3-black">Draw a rectangle.</a> <!--This is a button that when clicked will draw a green rectangle!!!!-->
 
-	<a href="#one" onclick="clearRect();" class="w3-btn w3-black">Clear canvas.</a><!--this button will clear the canvas when clicked!-->
+	<a  onclick="clearRect();" class="w3-btn w3-black">Clear canvas.</a><!--this button will clear the canvas when clicked!-->
 	
-	<a href="#one" onclick="strokeText();" class="w3-btn w3-black">Write name.</a><!--this button writes my name onto the canvas-->
+	<a  onclick="strokeText();" class="w3-btn w3-black">Write name.</a><!--this button writes my name onto the canvas-->
 	
-	<a href="#one" onclick=show image  class="w3-btn w3-black">Load image.</a><!--this button loads an image-->
+	<a  onclick="displayImage();" class="w3-btn w3-black">Load image.</a><!--this button loads an image-->
+	
+	
 	
 <footer class="w3-bottom w3-container w3-flat-peter-river">
 	<p>DIY!</p>
